middle step 7